--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/material-top-tabs": "^7.4.13",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
     "expo": "~54.0.32",
+    "expo-font": "~14.0.11",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-pager-view": "6.9.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-tab-view": "^4.2.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
